k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: client-deployment
spec:
    replicas: 3
    selector: 
        matchLabels: 
            component: web
    template:
        metadata: 
          labels: 
            component: web
        spec:
          - name: client
            image: cmkjani/multi-client
            ports:
              - containerPort: 3000
